--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "@types/react": "18.2.28",
     "@types/react-dom": "18.2.13",
     "autoprefixer": "10.4.16",
-    "eslint": "8.51.0",
     "eslint-config-next": "13.5.4",
     "next": "13.5.4",
     "postcss": "8.4.31",
@@ -21,5 +20,11 @@
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2"
+  },
+  "devDependencies": {
+    "@rocketseat/eslint-config": "^2.1.0",
+    "eslint": "^8.51.0",
+    "prettier": "^3.0.3",
+    "prettier-plugin-tailwindcss": "^0.5.6"
   }
 }
