--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react-dom": "18.2.13",
     "autoprefixer": "10.4.16",
     "eslint-config-next": "13.5.4",
+    "lucide-react": "^0.287.0",
     "next": "13.5.4",
     "postcss": "8.4.31",
     "react": "18.2.0",
